fix menu dropdown on firefox

--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -37,6 +37,6 @@ $menu-height: 45px;
   }
 
   .options {
-    margin-top: calc(#{$menu-height} + 15px);
+    margin-top: calc(#{$menu-height} + 5px);
   }
 }
